--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -1,8 +1,8 @@
 /*
  * @Author: Peak Xin 
  * @Date: 2020-05-14 16:10:36 
- * @Last Modified by:   Peak Xin 
- * @Last Modified time: 2020-05-14 16:10:36 
+ * @Last Modified by: Peak Xin
+ * @Last Modified time: 2020-05-14 16:28:53
  */
 // less
 @charset "utf-8";
@@ -10,6 +10,7 @@
 .navbar {
     border: 0;
     margin: 0;
+    box-shadow: 0 0 15px rgba(0,0,0,.3);
 }
 .navbar-default {
     background-color: #fff;
