--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,12 +2,13 @@
 /*
  * @Author: Peak Xin 
  * @Date: 2020-05-14 16:10:36 
- * @Last Modified by:   Peak Xin 
- * @Last Modified time: 2020-05-14 16:10:36 
+ * @Last Modified by: Peak Xin
+ * @Last Modified time: 2020-05-14 16:28:53
  */
 .navbar {
   border: 0;
   margin: 0;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
 }
 .navbar-default {
   background-color: #fff;
