--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,7 @@
  * @Author: Peak Xin 
  * @Date: 2020-05-14 16:10:36 
  * @Last Modified by: Peak Xin
- * @Last Modified time: 2020-05-14 16:28:53
+ * @Last Modified time: 2020-05-15 00:07:44
  */
 .navbar {
   border: 0;
@@ -11,7 +11,40 @@
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
 }
 .navbar-default {
-  background-color: #fff;
+  background-color: #ffffff;
+}
+.navbar-default .navbar-nav {
+  position: relative;
+}
+.navbar-default .navbar-nav li > a:hover,
+.navbar-default .navbar-nav li > a:focus {
+  color: #0a89ea;
+}
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover {
+  color: #0a89ea;
+  background-color: #ffffff;
+}
+.navbar-default .navbar-nav > .active > a:after,
+.navbar-default .navbar-nav > .active > a:hover:after {
+  content: ' ';
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  left: 0;
+  bottom: 0;
+  background-color: #0a89ea;
+  border-radius: 5px;
+}
+.navbar-default .navbar-nav .nav-bar {
+  display: block;
+  position: absolute;
+  background-color: #0a89ea;
+  border-radius: 5px;
+  height: 4px;
+  z-index: 1000;
+  transition: all .2s;
+  -webkit-transition: all .2s;
 }
 .navbar-brand {
   padding: 4px 15px;
@@ -19,8 +52,23 @@
 .banner {
   margin-top: 50px;
 }
+section .header h2 {
+  color: #0a89ea;
+}
+section .body h3 {
+  margin-bottom: 34px;
+}
+section .body ul li {
+  font-size: 16px;
+  text-indent: 2em;
+}
+section .body .lead {
+  font-size: 16px;
+  text-indent: 2em;
+}
 .footer {
   background-color: #313131;
+  border-top: 4px solid #0a89ea;
   padding: 10px 0;
 }
 .footer a {
